--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (4.3.3-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Fri, 29 Jan 2010 16:48:24 -0700
+
 cl-sql (4.3.2-1) unstable; urgency=low
 
   * New upstream
