--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (5.0.3-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Thu, 11 Feb 2010 15:18:04 -0700
+
 cl-sql (5.0.2-1) unstable; urgency=low
 
   * New upstream
