--- a/ChangeLog
+++ b/ChangeLog
@@ -1,13 +1,14 @@
 2010-02-16  Kevin Rosenberg <kevin@rosenberg.net>
+	* Version 5.0.4
 	* db-mysql/mysql-api.lisp: Fix mysql_options UFFI parameter list
 	* doc/ref-connect.xml: Document the MySQL options parameter as
 	part of	the connection-spec.
-	
+
 2010-02-15  Kevin Rosenberg <kevin@rosenberg.net>
 	* db-mysql/mysql-{api,sql}.lisp: Support sending options
 	to MySQL using mysql_options, which occurs between the API calls
 	of mysql_init and mysql_real_connect.
-	
+
 2010-02-11  Kevin Rosenberg <kevin@rosenberg.net>
 	* Version 5.0.3
 	* multiple-files: Further internationalization. Change
