--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2010-03-01  Kevin Rosenberg <kevin@rosenberg.net>
+	* db-mysql/mysql-api.lisp: Remove spurious enumeration
+
 2010-02-16  Kevin Rosenberg <kevin@rosenberg.net>
 	* Version 5.0.4
 	* db-mysql/mysql-api.lisp: Fix mysql_options UFFI parameter list
