--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2010-03-21  Kevin Rosenberg <kevin@rosenberg.net>
-	* sql/fdml.lisp: Fix DO-QUERY to actually return the last value of the body
+	* Version 5.0.5
+	* sql/fdml.lisp: Fix DO-QUERY to actually return the last value of
+	the body.
 
 2010-03-02  Nathan Bird  <nathan@acceleration.net>
 	* doc/: Added a README on how to build doc; now builds on Ubuntu.
