--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+cl-sql (5.0.6-1) unstable; urgency=low
+
+  * New upstream
+  * Switch to dpkg-source 3.0 (quilt) format
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Fri, 16 Apr 2010 00:44:41 -0600
+
 cl-sql (5.0.5-1) unstable; urgency=low
 
   * New upstream
