--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (5.1.0-1) unstable; urgency=low
+
+  * New upstream - depends on UFFI 2.x
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Tue, 20 Apr 2010 12:37:13 -0600
+
 cl-sql (5.0.6-1) unstable; urgency=low
 
   * New upstream
