--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-06-15  Kevin Rosenberg <kevin@rosenberg.net>
+	* Version 5.1.1
+	* clsql-{uffi,mysql}.asd: Modify operation-done-p functions
+	to guard against change introduced in new ASDF traversing.
+
 2010-04-20  Kevin Rosenberg <kevin@rosenberg.net>
 	* Version 5.1.0 [DEPENDENCY UPGRADE: UFFI 2.x needed]
 	* clsql-uffi.asd: Depend on UFFI version >= 2.0
