--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (5.1.1-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Sat, 15 May 2010 15:20:38 -0600
+
 cl-sql (5.1.0-1) unstable; urgency=low
 
   * New upstream - depends on UFFI 2.x
