--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (5.1.2-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Mon, 16 Aug 2010 11:27:41 -0600
+
 cl-sql (5.1.1-1) unstable; urgency=low
 
   * New upstream
