--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (5.1.4-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Mon, 20 Sep 2010 21:56:46 -0600
+
 cl-sql (5.1.3-1) unstable; urgency=low
 
   * New upstream
