--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (5.2.0-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Sun, 07 Nov 2010 09:47:02 -0700
+
 cl-sql (5.1.4-1) unstable; urgency=low
 
   * New upstream
