--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (5.3.1-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Wed, 30 Mar 2011 23:32:06 -0600
+
 cl-sql (5.3.0-1) unstable; urgency=low
 
   * New upstream
