--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 2011-04-01  Kevin Rosenberg <kevin@rosenberg.net>
+	* Version 5.3.2
 	* db-mysql/mysql-client-info.lisp: Add recognition of
 	version 6 of MySQL client library.
+	* sql/metaclass.lisp: Fix the fix in the reader condition
 
 2011-03-30  Kevin Rosenberg <kevin@rosenberg.net>
 	* Version 5.3.1
